# lab7_oop_2025

./: .gitignore  CMakeLists.txt  README.md
include/: dragon.h  factory.h  fightVisitor.h  knight.h  npc.h  observer.h  toad.h
src/: dragon.cpp  factory.cpp  fightVisitor.cpp  knight.cpp  main.cpp  npc.cpp  observer.cpp  toad.cpp
tests/: test_factory.cpp  test_fightVisitor.cpp  test_npc.cpp  test_observer.cpp
